--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.a86abc3e.js"></script>
-    <link rel="stylesheet" href="/assets/index.a21e5b8f.css">
+    <script type="module" crossorigin src="assets/index.a86abc3e.js"></script>
+    <link rel="stylesheet" href="assets/index.a21e5b8f.css">
   </head>
   <body>
     <div id="root"></div>
